--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "bugs": {
     "url": "https://github.com/luxplanjay/webpack-starter-kit/issues"
   },
-  "homepage": "https://github.com/luxplanjay/webpack-starter-kit#readme",
+  "homepage": "https://vova0737.github.io/goit-js-hw-13-image-finder/",
   "devDependencies": {
     "@babel/core": "^7.11.6",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
@@ -35,11 +35,11 @@
     "html-loader": "^1.3.1",
     "html-webpack-plugin": "^4.5.0",
     "img-loader": "^3.0.2",
-    "mini-css-extract-plugin": "^0.11.2",
+    "mini-css-extract-plugin": "^0.11.3",
     "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "postcss-loader": "^4.0.2",
-    "sass-loader": "^10.0.2",
+    "sass-loader": "^10.1.1",
     "style-loader": "^1.2.1",
     "url-loader": "^4.1.0",
     "webpack": "^4.44.2",
@@ -49,6 +49,9 @@
     "webpackbar": "^4.0.0"
   },
   "dependencies": {
+    "@pnotify/core": "^5.2.0",
+    "axios": "^0.21.1",
+    "basiclightbox": "^5.0.4",
     "core-js": "^3.6.5",
     "handlebars": "^4.7.6"
   }
